Fixed navbar hiding content on mobile

--- a/css/main.less
+++ b/css/main.less
@@ -99,7 +99,6 @@ html {
 
 body {
     margin-bottom: 100px;
-    padding-top: 50px;
 }
 
 .brand-image {
